--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,8 +58,8 @@ nav:
 
  - Local Xengineering Ref Only:
    - Partitioning: localstuff for Xengineering ref/esp32_partition_guide.md
-   - Setup Guide: localstuff for Xengineering ref/mkdocs_setup_guide.md
-   - OTA: localstuff for Xengineering ref/updated_ota_docs.md
+   - MkDocs Guide: localstuff for Xengineering ref/mkdocs_setup_guide.md
+   - OTA: localstuff for Xengineering ref/updated_ota_docs V3.md
    - Planning: localstuff for Xengineering ref/updated_planning_doc.md
 
 
