--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,7 +38,7 @@ nav:
    - Digital Inputs: hardware/digital-inputs.md
    - Digital Outputs: hardware/digital-outputs.md
    - Alternator Field Drive: hardware/field-output.md
-   - Analog Inputs: hardware/analog-inputs.md
+   - Analog Inputs: hardware/analoginputsADS1115.md
    - Power Supply: hardware/power-supply.md
    - ESP32 Controller: hardware/esp32-controller.md
    - Connectors & Wiring: hardware/connectors.md
