--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,7 +37,7 @@ nav:
    - System Architecture: hardware/system-architecture.md
    - Digital Inputs: hardware/digital-inputs.md
    - Digital Outputs: hardware/digital-outputs.md
-   - Alternator Field Drive: alterantor_field_drive.md
+   - Alternator Field Drive: alternator_field_drive.md
    - Analog Inputs: hardware/analoginputsADS1115.md
    - Input Protection: hardware/input-protection.md
    - ESP32 Controller: hardware/esp32-controller.md
