--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,9 +36,9 @@ nav:
  - Hardware:
    - System Architecture: hardware/system-architecture.md
    - Digital Inputs: hardware/digital-inputs.md
-   - Switching Power Supply: hardware/switching_power_supply
+   - Switching Power Supply: hardware/switching_power_supply_doc
    - Digital Outputs: hardware/digital-outputs.md
-   - Alternator Field Drive: alternator_field_drive.md
+   - Alternator Field Drive: hardware/alternator_field_drive.md
    - Analog Inputs: hardware/analoginputsADS1115.md
    - Input Protection: hardware/input-protection.md
    - ESP32 Controller: hardware/esp32-controller.md
