--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,9 @@ nav:
    - Alternator Field Drive: hardware/alternator_field_drive.md
    - Press and Temp Sensor: hardware/bmp390_documentation.md
    - Warning Buzzer: hardware/buzzer_control_doc.md
+   - Tachometer Output: hardware/tach_out.md
+   - USB C Connector: hardware/usb_c.md
+   - NMEA2K: hardware/nmea2k.md
    - Analog Inputs: hardware/analoginputsADS1115.md
    - Input Protection: hardware/input-protection.md
    - ESP32 Controller: hardware/esp32-controller.md
