--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,7 +44,7 @@ nav:
    - BatteryV and Current Monitor: hardware/ina228.md
    - Warning Buzzer: hardware/buzzer_control_doc.md
    - Tachometer Output: hardware/tach_out.md
-   - USB C Connector: hardware/usb_c.md
+   - USB-C: hardware/usb_c.md
    - NMEA2K: hardware/nmea2k.md
    - Analog Inputs: hardware/analoginputsADS1115.md
    - Input Protection: hardware/input-protection.md
