--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,5 +71,6 @@ nav:
    - MkDocs Guide: localstuff for Xengineering ref/mkdocs_setup_guide.md
    - OTA: localstuff for Xengineering ref/updated_ota_docs V3.md
    - Planning: localstuff for Xengineering ref/updated_planning_doc.md
+   - Biz Stuff: localstuff for Xengineering ref/business_analysis_summary.md
 
 copyright: Copyright &copy; 2025 Xengineering
