--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,5 +72,6 @@ nav:
    - OTA: localstuff for Xengineering ref/updated_ota_docs V3.md
    - Planning: localstuff for Xengineering ref/updated_planning_doc.md
    - Biz Stuff: localstuff for Xengineering ref/business_analysis_summary.md
+   - AI Notes: localstuff for Xengineering ref/AI_notes_Aug2025.md
 
 copyright: Copyright &copy; 2025 Xengineering
